# aoc2022

./: Cargo.toml  newday.ps1
input/2022/: day10.txt
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day15.rs  day2.rs  dayXX.rs  lib.rs  main.rs  utils.rs
src/utils/: const_utils.rs  mod.rs  parsing.rs  slice.rs  tuple.rs
