[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
nom = "7.1.1"
arrayvec = "0.7.2"
either = "1.8.0"
memchr = "2.5.0"
bytemuck = "1.12.3"
#hashers = "1.0.1"
bitvec = "1.0.1"
#num = "0.4.0"
rayon = "1.6.1"